--- a/docs/en-gb/modules/markets/pages/amazon-fba.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-fba.adoc
@@ -65,7 +65,7 @@ Proceed as described below to set up Amazon FBA in your plentymarkets system.
 
 Amazon is continuously expanding its European Fulfilment Network for sellers who use shipment by Amazon. In order to use this network, you need to be fiscally registered in all countries in which you use FBA logistics centres. In order for your invoices to be generated correctly for these new logistics centres from the fiscal point of view, you can - in addition to your company location - select the warehouse location as basis for the default VAT rate. You can carry out these settings for each client in the *Setup » Client » [Select client] » Locations » [Select location] » Accounting* menu. In the *VAT rates* tab, you save the necessary tax rates for the countries.
 
-* xref:orders:accounting.adoc#_creating_a_new_location[How to set up a new location]
+* xref:orders:accounting.adoc#320[How to set up a new location]
 * xref:orders:accounting.adoc#550[How to enter VAT rates]
 
 [.collapseBox]
@@ -98,7 +98,7 @@ Creating a warehouse:
 [TIP]
 .Separate Amazon FBA stock display for EU and UK
 ====
-Since Brexit, the FBA UK stock for amazon.co.uk is managed separately and not subsumed under the FBA EU stock. To have the *FBA EU stock* as well as the *FBA UK stock* displayed, at least one account is needed in the system which is linked to a European seller account and which is allowed to retrieve information from a European Amazon platform. An additional account is needed in the system, which is linked to a European seller account and which is allowed to retrieve information from the platform amazon.co.uk. This account then retrieves the total FBA UK stock. For more information, refer to the best practice xref:arkets:best-practices-amazon-fba-stock-display.adoc#[Amazon FBA stock display for EU and UK].
+Since Brexit, the FBA UK stock for amazon.co.uk is managed separately and not subsumed under the FBA EU stock. To have the *FBA EU stock* as well as the *FBA UK stock* displayed, at least one account is needed in the system which is linked to a European seller account and which is allowed to retrieve information from a European Amazon platform. An additional account is needed in the system, which is linked to a European seller account and which is allowed to retrieve information from the platform amazon.co.uk. This account then retrieves the total FBA UK stock. For more information, refer to the best practice xref:markets:best-practices-amazon-fba-stock-display.adoc#[Amazon FBA stock display for EU and UK].
 ====
 
 [#90]
@@ -364,7 +364,7 @@ video::314727596[vimeo]
 [#3800]
 === Creating a warehouse for Amazon Multi-Channel
 
-Create a warehouse, if you have not yet created one as described in the <<Using the FBA service by Amazon, Using the FBA service by Amazon>> chapter. When using Multi-Channel fulfilment, it is important to set up a warehouse for each country-specific Amazon marketplace with the logistics type *Amazon* and the country as its location.
+Create a warehouse, if you have not yet created one as described in the <<#60, Creating a warehouse for Amazon FBA>> chapter. When using Multi-Channel fulfilment, it is important to set up a warehouse for each country-specific Amazon marketplace with the logistics type *Amazon* and the country as its location.
 
 [IMPORTANT]
 .Example of matching Amazon platform and warehouse location
@@ -383,7 +383,7 @@ Activating the variation availability for Amazon Multi-Channel:
 . Go to *Item » Edit item*.
 . Open the item.
 . Click on the *Multi-Channel* tab.
-. Carry out the settings in the *Amazon* area. Pay attention to the explanations given in <<item-availability-amazon>> in the <<#700, Setting the variation availability>> chapter.
+. Carry out the settings in the *Amazon* area. Pay attention to the explanations given in the chapter xref:markets:preparing-variations.html#700[Setting the variation availability].
 . Save (terra:save[]) the settings.
 
 [#4000]
@@ -505,7 +505,7 @@ include::_includes:partial$event-procedure.adoc[]
 |
 |====
 
-When switching to status 5, Amazon is informed that the items are cleared for shipping. Amazon ships the items and your plentymarkets system receives a confirmation from Amazon. The order switches to status 5.1, as determined in the <<Carrying out order settings, order settings>>. The package number is imported into your plentymarkets system.
+When switching to status 5, Amazon is informed that the items are cleared for shipping. Amazon ships the items and your plentymarkets system receives a confirmation from Amazon. The order switches to status 5.1, as determined in the <<#70, order settings>>. The package number is imported into your plentymarkets system.
 
 [TIP]
 .Import of package numbers
@@ -543,7 +543,7 @@ Automatically synchronising stock:
 
 4 minutes are allotted for this process. If Amazon does not provide the data within this time frame, then stock is not synchronised. The next request will use the previous data that was not transferred. This can lead to errors. Therefore, we recommend that you manually synchronise data with a CSV file as described in the next chapter.
 
-Stock information is only synchronised for those items that had their stock changed on Amazon in the last 30 days. We recommend that you use the manual synchronisation for the first import. The stock is synchronised according to the <<Carrying out the initial settings, initial settings>> in plentymarkets.
+Stock information is only synchronised for those items that had their stock changed on Amazon in the last 30 days. We recommend that you use the manual synchronisation for the first import. The stock is synchronised according to the xref:markets:amazon-setup.adoc#300[initial settings] in plentymarkets.
 --
 
 Manually synchronising stock::
@@ -554,7 +554,7 @@ Stock is synchronised manually via CSV file.
 [IMPORTANT]
 .Assigning SKU numbers
 ======
-If you want to manually synchronise data, then you also have to specify how SKU numbers should be assigned to the stock. This is specified in the xref:markets:amazon-setup.adoc#400[initial settings].
+If you want to manually synchronise data, then you also have to specify how SKU numbers should be assigned to the stock. This is specified in the xref:markets:amazon-setup.adoc#300[initial settings].
 ======
 
 Before you carry out this synchronisation, you have to request the corresponding report file from Amazon in Seller Central. Download this CSV file and save it on your computer.
