--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -421,7 +421,7 @@ Creating a characteristic:
 . Activate the option *Kaufland.de*.
 . Save (terra:save[]) the settings.
 
-For further information about linking characteristics with Kaufland.de, refer to the best practice page xref:markets:kaufland-de:best-practices-kaufland-linking-characteristics.adoc#[Linking characteristics to attributes].
+For further information about linking characteristics with Kaufland.de, refer to the best practice page xref:markets:best-practices-kaufland-linking-characteristics.adoc#[Linking characteristics to attributes].
 
 [#catalogue-export]
 === _Alternative 2:_ Catalogue export _(recommended)_
