--- a/docs/en-gb/modules/markets/pages/variation-export.adoc
+++ b/docs/en-gb/modules/markets/pages/variation-export.adoc
@@ -31,7 +31,7 @@ Catalogues for exporting variation data to Amazon are a new feature.
 == Important information on Amazon catalogues
 
 * A separate catalogue is created for each combination of an Amazon account, an Amazon platform and a flatfile. +
-*_Note:_* If Amazon releases a new version of the flatfile, a new catalogue needs to be created. The good news is: You can xref:data:marketplace-export.adoc#190[copy and edit] the catalogue with the old flatfile version with a few convenient clicks.
+*_Note:_* If Amazon releases a new version of the flatfile, a new catalogue needs to be created. The good news is: You can xref:data:catalogues-manage.adoc#190[copy and edit] the catalogue with the old flatfile version with a few convenient clicks.
 * Characteristics and free text fields cannot be transmitted to Amazon in catalogues. You can create properties for the mandatory field of a flatfile in the assistant for the Amazon catalogue. You can create and map additional properties at any time.
 * A separate flatfile exists for Amazon Business (B2B). As such, you need to create a separate catalogue for Amazon Business.
 * BMVD export categories are ignored in the catalogues.
