--- a/docs/en-gb/modules/markets/pages/best-practices-amazon-vcs.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practices-amazon-vcs.adoc
@@ -26,7 +26,7 @@ If you would like to use VCS, some requirements have to be met:
   .. A warehouse for each Amazon platform on which you sell items
   .. A warehouse for every country that items are shipped from
   .. A warehouse for each Amazon FBA logistic warehouse that you store items in +
-  (How to xref:markets:amazon-fba.adoc#60[create a warehouse for Amazon FBA])
+  (How to xref:page:amazon-fba.adoc#60[create a warehouse for Amazon FBA])
 . To ensure that Amazon can calculate your orders with VCS, the tax settings (verified VAT number) must be saved in Seller Central for each country from which your products are sent by either you or by Amazon FBA.
 ====
 
