--- a/docs/en-gb/modules/data/pages/ElasticSync.adoc
+++ b/docs/en-gb/modules/data/pages/ElasticSync.adoc
@@ -20,7 +20,7 @@ Creating an import:
 → The import overview opens.
 . Click on *Add import* (material:add[]). +
 → The editing area *New import* opens.
-. Carry out the settings. Pay attention to the explanations given in <<tabelle-sync-erstellen>>. +
+. Carry out the settings. Pay attention to the explanations given in <<table-create-sync>>. +
 *_Important:_* Wait until the very end before you set the import interval. Otherwise, the first import might start while you are still working on the settings for the import matching or mapping.
 . Save (material:save[]) the settings. +
 → The import is created. +
@@ -53,7 +53,7 @@ By choosing the option *Schedule* you can determine how often and at what time t
 * xref:data:elasticSync-facets.adoc#[Facets] = Imports facets
 * xref:data:elasticSync-parts-compatibility-listing.adoc#[Parts compatibility listing] = Imports parts compatibility listing data
 * xref:data:elasticSync-coupon-codes.adoc#[Coupon codes] = Imports coupon codes
-* xref:data:elasticSync-manufacturers.adoc#[Manufacturers] = Imports manufacturer data
+* xref:data:elasticSync-manufacturer.adoc#[Manufacturers] = Imports manufacturer data
 * xref:data:elasticSync-campaigns.adoc#[Campaigns] = Imports coupon campaigns
 * xref:data:elasticSync-categories.adoc#[Categories] = Imports category data
 * xref:data:elasticSync-contacts.adoc#[Contacts, companies and addresses] = Imports contact data, company data and address data
@@ -169,7 +169,7 @@ Setting the import options:
 . Go to *Data » Import » [Open import]*. +
 → The view *Settings* opens.
 . Open the view *Matching*.
-. Determine the import options. Pay attention to the explanations given in <<tabelle-Sync-Importoptionen>>.
+. Determine the import options. Pay attention to the explanations given in <<table-sync-import-options>>.
 . Save (icon:save[role="green"]) the settings.
 
 [[table-sync-import-options]]
