--- a/docs/en-gb/modules/data/pages/_variationmarketidentnumber.adoc
+++ b/docs/en-gb/modules/data/pages/_variationmarketidentnumber.adoc
@@ -93,7 +93,7 @@ The data fields **ASIN** and **ePID** may not be left empty. If you leave the fi
 
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 2 are available for xref:data:importing-data.adoc#25[data synchronisation]. These data fields are mandatory synchronisation fields. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**.
+The data fields that are listed in table 2 are available for data synchronisation. These data fields are mandatory synchronisation fields. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**.
 
 [cols="1,3"]
 |====
