--- a/docs/en-gb/modules/data/pages/formatdesigner-active-listings.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-active-listings.adoc
@@ -480,7 +480,7 @@ Transfer as item number
 [#1400]
 == custom_value
 
-<<table-custom-value#>> lists the fields available for importing custom values.
+<<#table-custom-value>> lists the fields available for importing custom values.
 
 [[table-custom-value]]
 .Fields for exporting custom values
