--- a/docs/en-gb/modules/data/pages/variation.adoc
+++ b/docs/en-gb/modules/data/pages/variation.adoc
@@ -269,7 +269,7 @@ The value **0** is selected by default; with the value **0**, the maximum order 
 [#40]
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 2 are available for xref:data:importing-data.adoc#25[data synchronisation]. These data fields are compulsory synchronisation fields. At least one of the data fields from the following table must be selected for synchronisation. For the selected data field, select the option **Synchronisation** as **Import procedure**.
+The data fields that are listed in table 2 are available for data synchronisation. These data fields are compulsory synchronisation fields. At least one of the data fields from the following table must be selected for synchronisation. For the selected data field, select the option **Synchronisation** as **Import procedure**.
 
 .Data fields with the import procedure set to **Synchronisation**
 [cols="1,3"]
