--- a/docs/en-gb/modules/data/pages/variationbundle.adoc
+++ b/docs/en-gb/modules/data/pages/variationbundle.adoc
@@ -41,7 +41,7 @@ The following mandatory fields must be available for the data format **Variation
 
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 2 are available for xref:data:importing-data.adoc#25[data synchronisation]. These data fields are mandatory synchronisation fields. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**.
+The data fields that are listed in table 2 are available for data synchronisation. These data fields are mandatory synchronisation fields. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**.
 
 .Data fields with the import procedure set to **Synchronisation**
 [cols="1,3"]
