--- a/docs/en-gb/modules/data/pages/variationwarehouse.adoc
+++ b/docs/en-gb/modules/data/pages/variationwarehouse.adoc
@@ -91,7 +91,7 @@ The following mandatory fields must be available for the data format **Variation
 
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 2 are available for xref:data:importing-data.adoc#25[data synchronisation]. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**. Mandatory synchronisation fields are marked with an **M**. Optional fields are marked with an **O**. The mandatory synchronisation field **WarehouseID** must be combined with at least one of the optional fields.
+The data fields that are listed in table 2 are available for data synchronisation. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**. Mandatory synchronisation fields are marked with an **M**. Optional fields are marked with an **O**. The mandatory synchronisation field **WarehouseID** must be combined with at least one of the optional fields.
 
 .Data fields with the import procedure set to **Synchronisation**
 [cols="1,3,3"]
