--- a/docs/en-gb/modules/data/pages/catalogues-first-contact.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues-first-contact.adoc
@@ -6,7 +6,7 @@
 
 Are you just starting out using catalogues? Then you’re in the right place.
 
-* <<#catalogues-formats, Which types of catalogues are available?>>
+* <<#catalogue-formats, Which types of catalogues are available?>>
 * <<#catalogue-overview, Get to know the catalogue overview.>>
 
 include::_includes:page$new-page-info-box.adoc[]
@@ -26,7 +26,7 @@ Which standard format you choose depends on the type of data you want to export.
 
 Not all types of data can currently be exported using catalogues. Until standard formats are available for all types of data, you can still use the xref:data:FormatDesigner.adoc#[ Formatdesigner].
 
-* Find out how to create catalogues with standard formats on the xref:datafile-export.adoc#[Creating standard formats].
+* Find out how to create catalogues with standard formats on the xref:export-standard-formats.adoc#[Creating standard formats].
 
 | *Marketplace format*
 | The marketplace formats are used to *_export variation data to markets and other sales channels._*
@@ -35,7 +35,7 @@ Each sales channel requires different product data. Often, different product inf
 
 A marketplace format provides a framework of the data a sales channel can accept. Catalogues allow you to customise information regarding your product portfolio to meet the requirements of each sales channel and target audience.
 
-* An introduction to marketplace formats lives on the manual page xref:data:market-export#[Using marketplace formats].
+* An introduction to marketplace formats lives on the manual page xref:data:export-marketplace-formats.adoc#[Using marketplace formats].
 * Check the manual pages of xref:markets:markets.adoc#[the individual sales channels] to find out how to create a catalogue for each market.
 
 |====
