--- a/docs/en-gb/modules/data/pages/itemimage.adoc
+++ b/docs/en-gb/modules/data/pages/itemimage.adoc
@@ -80,7 +80,7 @@ The following mandatory fields must be available for the data format **ItemImage
 
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 2 are available for xref:data:importing-data.adoc#25[data synchronisation]. For mandatory synchronisation fields (M), select the option **Synchronisation** as **Import procedure**. The rest of the fields can also be used for the synchronisation if desired. Alternative synchronisation fields are marked with an **A**.
+The data fields that are listed in table 2 are available for data synchronisation. For mandatory synchronisation fields (M), select the option **Synchronisation** as **Import procedure**. The rest of the fields can also be used for the synchronisation if desired. Alternative synchronisation fields are marked with an **A**.
 
 .Data fields with the import procedure set to **Synchronisation**
 [cols="1,3,3"]
