--- a/docs/en-gb/modules/data/pages/itemlistingmarketricardo.adoc
+++ b/docs/en-gb/modules/data/pages/itemlistingmarketricardo.adoc
@@ -319,7 +319,7 @@ __Table 1: data fields of the data format *ItemListingMarketRicardo*__
 
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 2 are available for xref:data:importing-data.adoc#25[data synchronisation]. For mandatory synchronisation fields, select the option *Synchronisation* as *Import procedure*. The rest of the fields can also be used for the synchronisation if desired. These data fields are marked with an *A*. Mandatory synchronisation fields are marked with an *M*.
+The data fields that are listed in table 2 are available for data synchronisation. For mandatory synchronisation fields, select the option *Synchronisation* as *Import procedure*. The rest of the fields can also be used for the synchronisation if desired. These data fields are marked with an *A*. Mandatory synchronisation fields are marked with an *M*.
 
 [cols="1,3,3"]
 |====
