--- a/docs/en-gb/modules/data/pages/producer.adoc
+++ b/docs/en-gb/modules/data/pages/producer.adoc
@@ -101,7 +101,7 @@ Table 1 explains the data fields for the **Producer** data format in alphabetica
 
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 2 are available for xref:data:importing-data.adoc#25[data synchronisation]. These data fields are mandatory synchronisation fields. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**. At least one of the data fields from the following table must be selected for synchronisation.
+The data fields that are listed in table 2 are available for data synchronisation. These data fields are mandatory synchronisation fields. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**. At least one of the data fields from the following table must be selected for synchronisation.
 
 .Data fields with the import procedure set to **Synchronisation**
 [cols="1,3"]
