--- a/docs/en-gb/modules/data/pages/serialkeys.adoc
+++ b/docs/en-gb/modules/data/pages/serialkeys.adoc
@@ -50,7 +50,7 @@ The following mandatory field must be available for the data format **SerialKeys
 
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 2 are available for xref:data:importing-data.adoc#25[data synchronisation]. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**.
+The data fields that are listed in table 2 are available for data synchronisation. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**.
 
 [cols="1,3"]
 |====
