--- a/docs/en-gb/modules/data/pages/variationsalesprice.adoc
+++ b/docs/en-gb/modules/data/pages/variationsalesprice.adoc
@@ -97,7 +97,7 @@ The following mandatory fields must be available for the data format **Variation
 
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 2 are available for xref:data:importing-data.adoc#25[data synchronisation]. These data fields are mandatory synchronisation fields. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**. At least one of the data fields from the following table must be selected for synchronisation. You can also select both data fields.
+The data fields that are listed in table 2 are available for data synchronisation. These data fields are mandatory synchronisation fields. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**. At least one of the data fields from the following table must be selected for synchronisation. You can also select both data fields.
 
 .Data fields with the import procedure set to **Synchronisation**
 [cols="1,3"]
