--- a/docs/en-gb/modules/data/pages/variationsupplier.adoc
+++ b/docs/en-gb/modules/data/pages/variationsupplier.adoc
@@ -103,7 +103,7 @@ The following mandatory fields must be available for the data format **Variation
 
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 2 are available for xref:data:importing-data.adoc#25[data synchronisation]. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**. The rest of the fields can also be used for the synchronisation if desired. Mandatory synchronisation fields are marked with an **M**.
+The data fields that are listed in table 2 are available for data synchronisation. For mandatory synchronisation fields, select the option **Synchronisation** as **Import procedure**. The rest of the fields can also be used for the synchronisation if desired. Mandatory synchronisation fields are marked with an **M**.
 
 .Data fields with the import procedure set to **Synchronisation**
 [cols="1,3,3"]
