ADD more work to the item faq page

--- a/docs/de-de/modules/artikel/pages/faq-pim.adoc
+++ b/docs/de-de/modules/artikel/pages/faq-pim.adoc
@@ -1,17 +1,16 @@
 = FAQ: Artikelverwaltung
-:keywords: #Neue Artikel-UI#, Artikel » Artikel-UI, Artikel erstellen, Artikeldaten erstellen, Artikel anlegen, Artikeldaten anlegen, Variante erstellen, Variantendaten erstellen, Variante anlegen, Variantendaten anlegen, Artikelanlage, Artikel anlage, Artikel manuell anlegen, Artikel manuell erstellen, Neuer Artikel, Neue Artikel, Neue Variante, Neue Varianten, Neues Produkt, Neue Produkte, Variantenanlage, Varianten anlage, Variante anlage, Artikelerstellung
-:description: #Erfahre, wie du Artikel# und Varianten manuell erstellst.
-:id: 4D0KOON
+:keywords: FAQ, FAQs, Frequently Asked Questions, Häufig gestellte Fragen, Fragenkatalog
+:description: Auf dieser Seite findest du eine Liste der häufig gestellten Fragen zur Artikelverwaltung.
+:id: 7VBE58X
 :author: team-item
 
 ////
-zuletzt bearbeitet 11.08.22
+zuletzt bearbeitet 12.08.22
 ////
 
 //ToDo - includes machen für alle Fragen ab den Kapitel Attribute
 //ToDo - weitere Fragen selbst ergänzen
 //ToDo - Maik und Brummi fragen, ob sie noch weitere FAQs haben
-//ToDo - alle Anker prüfen
 //ToDo - wenn die neue Artikel-UI als standard eingebunden wird, dann die Antworten der letzte beide Fragen unter Allgemein anpassen
 
 Auf dieser Seite findest du eine Liste der häufig gestellten Fragen zur Artikelverwaltung.
@@ -258,7 +257,7 @@ Im Nachhinein bist du also viel flexibler.
 
 --
 
-[#300]
+[#400]
 == Eigenschaften
 
 [.collapseBox]
@@ -434,7 +433,7 @@ include::page$massenbearbeitung.adoc[tag=search-replace-config]
 
 --
 
-[#400]
+[#600]
 == Massenbearbeitung
 
 [.collapseBox]
@@ -491,20 +490,53 @@ Sie erklärt die verschiedenen Felder, die dir beim Importieren von Artikel- und
 --
 
 [.collapseBox]
-.*#Kann ich einen FTP-Server# verwenden, um z.B. viele Artikelbilder gleichzeitig hochzuladen?*
+.*Kann ich einen FTP-Server verwenden, um z.B. viele Artikelbilder gleichzeitig hochzuladen?*
 --
 
 //denk auch an die fast gleiche Frage unter Bilder
 
-Text
+Eher nicht.
+Neue plentymarkets Systeme werden nicht mehr mit einem FTP-Server ausgeliefert.
+Einige Bestandskunden verfügen bereits über einen FTP-Server, den sie bis zur endgültigen Abschaffung von FTP weiter nutzen können.
+
+[discrete]
+==== Alternativer Workflow für das Hochladen von Bildern
+
+. Hinterlege die Artikel-Bilder auf einem Webspace deiner Wahl, z.B. Dropbox, Google Drive oder ähnlichem.
+Die dort hinterlegten Bilder müssen über eine öffentliche URL abrufbar sein.
+. Importiere die Artikel-Bilder mit Hilfe einer CSV-Datei.
+In der CSV-Datei ordnest du einem Artikel anhand seiner ID die Bilder mitsamt gewünschter Position zu.
+
+*_Eingabeformat_*:
+`Bild1url;positionBild1,Bild2url;positionBild2`
+
+*_Beispiel CSV-Datei_*:
+[cols="1,4a"]
+|===
+|Artikel-ID	|Bild-URLs
+
+|1
+|`https://www.beispielwebspace.de/bild1.png;1`
+
+|2
+|`https://www.beispielwebspace.de/bild2.png;1,https://www.beispielwebspace.de/bild3.png;2`
+|===
+
+*_Weitere Informationen_*:
+
+* xref:daten:elasticSync-artikel.adoc#1350[Nötiges Zuordnungsfeld: Multi-URL (kommasepariert)]
+* xref:artikel:import.adoc#600[Praktisches Beispiel]
 
 --
 
 [.collapseBox]
-.*#Kann ich eine REST-API-Schnittstelle# für den Datenaustausch mit plentymarkets verwenden?*
+.*Kann ich eine REST-API-Schnittstelle für den Datenaustausch mit plentymarkets verwenden?*
 --
 
-Text
+Ja.
+Allgemein gesagt ermöglicht die REST-API-Schnittstelle externen Aufrufen, Daten an das plentymarkets System zu senden oder Daten von dem System abzurufen.
+
+xref:daten:rest-api.adoc#[Weitere Informationen]
 
 --
 
@@ -574,7 +606,7 @@ xref:ebay:ebay-einrichten.adoc#11000[Weitere Informationen zur Nutzung des eBay-
 
 --
 
-[#600]
+[#700]
 == Darstellung im plentyShop
 
 [.collapseBox]
@@ -740,13 +772,17 @@ include::page$attribute.adoc[tag=steps-attribute-value-name-translations]
 --
 ////
 
+[#800]
 == Spezielle Anwendungsfälle
 
 [.collapseBox]
-.*#Wie finde ich# heraus, welche meiner Artikel am häufigsten verkauft werden?*
+.*Wie finde ich heraus, welche meiner Artikel am häufigsten verkauft werden?*
 --
 
-Text
+Wirf einen Blick auf die "Renner/Penner" Statistik.
+Diese zeigt die am meisten und die am wenigsten verkauften Varianten während eines gewählten Zeitraums an.
+
+xref:daten:statistiken.adoc#[Weitere Informationen zur Statistik].
 
 --
 
@@ -759,25 +795,36 @@ include::page$multipacks-pakete-sets.adoc[tag=combining-products-preamble]
 --
 
 [.collapseBox]
-.*#Ich will Werbegeschenke# oder Gratiszugaben ab einem bestimmten Warenwert anbieten. Wie mache ich das?*
+.*Ich will Werbegeschenke oder Gratiszugaben ab einem bestimmten Warenwert anbieten. Wie mache ich das?*
 --
 
-Text
+Theoretisch könntest du manuell ein Werbegeschenk zu Bestellungen über einem bestimmten Warenwert hinzufügen.
+Es ist jedoch viel effizienter, wenn du diesen Vorgang mit Hilfe einer Ereignisaktion automatisierst.
 
---
-
-[.collapseBox]
-.*#Ich verkaufe# Artikel, die mit Seriennummern versehen sind. Kann plentymarkets protokollieren, welche Seriennummer zu welchem Auftrag gehört?*
---
-
-Text
+xref:artikel:gratiszugaben.adoc#[Weitere Informationen zum Vorgang].
 
 --
 
 [.collapseBox]
-.*#Ich verkaufe elektronische# Artikel mit einer Altersfreigabe. Oder Artikel, die nur mit einem Altersnachweis von 18+ gekauft werden können. Was muss ich beachten?*
+.*Ich verkaufe Artikel, die mit Seriennummern versehen sind. Kann plentymarkets protokollieren, welche Seriennummer zu welchem Auftrag gehört?*
 --
 
-Text
+Ja.
+Jedes Mal, wenn du einen Artikel mit einer Seriennummer verkaufst, kann plentymarkets protokollieren, welches Exemplar verkauft wurde.
+Mit anderen Worten kann plentymarkets festhalten, welche Seriennummer welcher Bestellung entspricht.
+
+xref:artikel:seriennummern.adoc#[Weitere Informationen].
+
+--
+
+[.collapseBox]
+.*Ich verkaufe Artikel mit einer Altersfreigabe. Manche Artikel dürfen nur mit einem Altersnachweis von 18+ gekauft werden. Was muss ich beachten?*
+--
+
+. Zuerst solltest du das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Global » Bereich: Grundeinstellungen* öffnen und die passende FSK-Altersempfehlung für jeden Artikel wählen.
+. Dann solltest du überlegen, wie Artikel mit einer Altersfreigabe von 18+ versendet werden.
+Hier muss ein Versandprofil verknüpft sein, bei dem die Option *PostIdent* aktiviert ist.
+
+xref:fulfillment:versand-vorbereiten.adoc#1000[Weitere Informationen zu Versandprofilen und PostIdent].
 
 --
