Gretchen/item faq (#955)
* CHANGE start work on faq page for item chapter

* ADD more work to the item faq page

* ADD more work to the item faq page

* ADD more work to the item faq page

* ADD work to the item faq page

* ADD more work to the item faq page

* ADD work to item faq page

* ADD more work to the item faq

* ADD more work to the item faq page

* ADD more work to the item faq page

--- a/docs/de-de/modules/artikel/pages/vererbung.adoc
+++ b/docs/de-de/modules/artikel/pages/vererbung.adoc
@@ -8,9 +8,13 @@
 zuletzt bearbeitet 09.04.2021
 ////
 
+//ToDo - when you rework this page, also rework the preamble and make sure it also answers the question on the item faq page
+
+//tag::inheritance-preamble[]
 Die xref:artikel:struktur.adoc#300[Hauptvariante] eines Artikels unterscheidet sich von den Untervarianten dadurch, dass ihre Daten weitergegeben, also vererbt werden können. Die Hauptvariante ist also eine Elternvariante, die bestimmte Daten an ihre Kinder vererbt.
 
 Die Vererbungsfunktion ist standardmäßig aktiviert. Wenn eine neue Variante eines Artikels erstellt wird, erbt diese Variante Einstellungen der Hauptvariante, solange keine davon abweichenden Daten gespeichert werden.
+//end::inheritance-preamble[]
 
 [#100]
 == Arten von Vererbung
