--- a/docs/de-de/modules/artikel/pages/massenbearbeitung.adoc
+++ b/docs/de-de/modules/artikel/pages/massenbearbeitung.adoc
@@ -11,10 +11,10 @@ zuletzt bearbeitet 26.10.2021
 Dein Business läuft und du hast bereits ein solides Produktportfolio aufgebaut.
 Aber wie gehst du am besten mit den Artikeldaten im Arbeitsalltag um?
 plentymarkets beinhaltet verschiedene Funktionen zur Verarbeitung von Artikeln.
-<<table-batch-processing-item-filter>> vergleicht die Möglichkeiten und erläutert sie beispielhaft.
+Die Tabelle vergleicht die Möglichkeiten und erläutert sie beispielhaft.
 
-.Funktionen zur Artikelverwaltung
-[[table-batch-processing-item-filter]]
+//tag::mass-editing-preamble[]
+
 [cols="1,5"]
 |===
 | Funktion | Erläuterung
@@ -57,6 +57,8 @@ Er ist einem bestehenden Produkt recht ähnlich.
 Kopiere in diesem Fall das bestehende Produkt.
 Ändere danach die abweichenden Einstellungen für den neuen Artikel.
 |===
+
+//end::mass-editing-preamble[]
 
 [#100]
 == Gruppenfunktion
@@ -154,12 +156,18 @@ Mit der Stapelverarbeitung kannst du, zum Beispiel:
 [IMPORTANT]
 .Stapelverarbeitung bricht bei großen Mengen ab
 ====
+
+//tag::batchprocessing-timeout[]
+
 Es kann zu einem Timeout kommen, wenn du versuchst, zu viele Artikel oder Varianten gleichzeitig zu bearbeiten.
 Wenn du eine sehr große Menge bearbeiten musst, empfehlen wir dir:
 
 * stattdessen das xref:daten:ElasticSync.adoc#[Import-Tool] zu verwenden.
 * die Stapelverarbeitung in kleineren Schritten durchzuführen.
 Du könntest zum Beispiel mit Markierungen arbeiten und nur eine Teilmenge deiner Artikel oder Varianten gleichzeitig bearbeiten.
+
+//end::batchprocessing-timeout[]
+
 ====
 
 [#500]
@@ -394,6 +402,8 @@ Mit anderen Worten, suche nach einem bestimmten Artikeltext in der Datenbank und
 [.instruction]
 Artikeltexte suchen und ersetzen:
 
+//tag::search-replace-config[]
+
 . Öffne das Menü *Artikel » Suchen & Ersetzen*.
 . Wähle das Datenbankfeld.
 . Gib einen Suchbegriff in das erste Feld ein. Beachte die Groß-/Kleinschreibung.
@@ -402,6 +412,8 @@ Artikeltexte suchen und ersetzen:
 → Die Anzahl der gefundenen Artikel wird angezeigt.
 . Klicke auf *Alle ersetzen*. +
 → Alle Texte werden durch die neuen Texte ersetzt.
+
+//end::search-replace-config[]
 
 [#800]
 == Artikel und Varianten kopieren
