Netto eStores-ID - EN+DE

--- a/docs/de-de/modules/artikel/pages/hersteller.adoc
+++ b/docs/de-de/modules/artikel/pages/hersteller.adoc
@@ -129,8 +129,8 @@ include::partial$neckermann.adoc[]
 include::partial$laredoute.adoc[]
 
 | *Netto eStores-ID*
-|Gib die Hersteller-ID des Marktplatzes ein.
-Die Hersteller-ID erhältst du beim Einrichten des Marktplatzes.
+| Gib eine beliebige ID ein. +
+Früher wurde hier die Hersteller-ID des Marktplatzes eingegeben. Netto hat diese ID aber inzwischen abgeschafft.
 
 | *Cdiscount.com-ID*
 |Gib die Hersteller-ID des Marktplatzes ein.
