--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -260,7 +260,7 @@ a| Select whether <<Processing returns, eBay returns>> should be retrieved or no
 * *No* = The eBay return process is deactivated in plentymarkets. New eBay returns are not imported into plentymarkets. eBay returns must be edited in the seller’s My eBay area instead.
 
 | *Retrieve eBay purchase cancellations*
-| Select whether <<Processing purchase cancellations, eBay purchase cancellations>> are retrieved and imported into plentymarkets. Purchase cancellations are updated every 15 minutes.
+| Select whether <<#8900-1, eBay purchase cancellations>> are retrieved and imported into plentymarkets. Purchase cancellations are updated every 15 minutes.
 
 | *Update eBay return status*
 | Select whether the return status should be updated *In return order*, *In credit note* or *In return order and credit note* when the status is changed by eBay. Return statuses are updated once per hour.
@@ -279,7 +279,7 @@ a| Select whether <<Processing returns, eBay returns>> should be retrieved or no
 | *Use "out of stock" option*
 a| Select whether the out of stock option should be used. +
 
-* *Yes* = Listings are not ended if the items are unavailable. The offer is displayed but cannot be purchased. The number of items sold is not set to zero when the item is available again. Rather, the sales history remains as it is. In addition to this option, the <<Activating the automatic stock update, automatic stock update>> in the *Initial settings* tab must be activated. Furthermore, this option takes priority over the <<Setting up stock, End offers automatically>> option, i.e. offers are not ended but displayed and cannot be purchased. +
+* *Yes* = Listings are not ended if the items are unavailable. The offer is displayed but cannot be purchased. The number of items sold is not set to zero when the item is available again. Rather, the sales history remains as it is. In addition to this option, the <<Activating the automatic stock update, automatic stock update>> in the *Initial settings* tab must be activated. Furthermore, this option takes priority over the <<#2500, End offers automatically>> option, i.e. offers are not ended but displayed and cannot be purchased. +
 * *No* = Listings are ended automatically if an item is not in stock.
 
 | *Price synchronisation*
@@ -588,7 +588,7 @@ Automatic email to email address::
 ===== Setting up the automatic email despatch:
 
 . Go to *Setup » Client » [Select client] » Email » Automatic*.
-. From the drop-down list *New order from eBay*, select the email template. Note <<#table-events-automatic-email-despatch>>.
+. From the drop-down list *New order from eBay*, select the email template.
 . Save (terra:save[]) the setting.
 --
 
@@ -1585,7 +1585,7 @@ include::partial$manage-listings.adoc[tag=listing-processes]
 [#6000]
 == Uploading offers with variations
 
-You can upload items with multiple variations as a single eBay offer. In order to create variations, you have to create attributes and link them with your items. Variations are xref:item:structure.adoc#400[combinations of different attributes]. Surcharges are applied to every combination, for example size, colour and material. Variations linked with a listing are also transferred to eBay when starting, restarting or updating the listing. For further information, refer to eBay’s link:https://www.ebay.co.uk/help/selling/listings/creating-managing-listings/creating-listings-variations?id=4150[Creating listings with variations^] page.
+You can upload items with multiple variations as a single eBay offer. In order to create variations, you have to create attributes and link them with your items. Variations are xref:item:attributes.adoc#[combinations of different attributes]. Surcharges are applied to every combination, for example size, colour and material. Variations linked with a listing are also transferred to eBay when starting, restarting or updating the listing. For further information, refer to eBay’s link:https://www.ebay.co.uk/help/selling/listings/creating-managing-listings/creating-listings-variations?id=4150[Creating listings with variations^] page.
 
 [IMPORTANT]
 .Variations for eBay listings have to match
@@ -1721,7 +1721,7 @@ If the *Wildcard character in layout template (eBay)* function is activated, the
 
 Use cross-selling to offer further products related to an item. These products are displayed at your listing on eBay. +
 
-Use the template function *GetCrossSellingData* to add xref:item:managing-items.adoc#970[cross-selling items] that are linked to an item to a <<Managing layout templates, layout template>> and <<Linking a layout template, link>> this layout template to the desired listings. Add cross-selling items to layout templates in the *Setup » Listings » Layout* menu.
+Use the template function *GetCrossSellingData* to add xref:item:cross-selling.html#[cross-selling items] that are linked to an item to a <<Managing layout templates, layout template>> and <<Linking a layout template, link>> this layout template to the desired listings. Add cross-selling items to layout templates in the *Setup » Listings » Layout* menu.
 The template function *GetCrossSellingData* displays the following data which can be displayed at a cross-selling item:
 
  * *Item ID* of the item in plentymarkets
@@ -2743,7 +2743,7 @@ Changing the order status to accept purchase cancellation:
 . Select an order.
 . Change the order’s status to the status for *eBay purchase cancellation accepted*.
 . Save (terra:save[]) the settings. +
-→ eBay will be automatically informed about your decision if you have set up the event procedure <<#9800, Communicating a purchase cancellation acceptance>>.
+→ eBay will be automatically informed about your decision if you have set up the event procedure <<#9300, Communicating a purchase cancellation acceptance>>.
 
 Use the group function to change multiple orders at once. If you want to accept the request for unpaid orders, then search for all unpaid orders with the appropriate status and change the orders’ status with the xref:orders:managing-orders.adoc#1700[group function].
 
@@ -2785,7 +2785,7 @@ Changing the order status to reject requests:
 . Select an order.
 . Change the order’s status to the status for *eBay purchase cancellation rejected*.
 . Save (terra:save[]) the settings. +
-→ eBay will be automatically informed about your decision if you have set up the event procedure <<#9900, Communicating a purchase cancellation rejection>>.
+→ eBay will be automatically informed about your decision if you have set up the event procedure <<#9400, Communicating a purchase cancellation rejection>>.
 --
 
 [.collapseBox]
@@ -3166,7 +3166,7 @@ Importing eBay listings:
 | Select a specific platform or select *ALL*. If you select a platform, only those market listings are imported that were listed on this platform. All listings from other platforms are not imported in this case. For example, this is useful if you have your German eBay listings translated by a service provider such as Webinterpret.
 
 | *Import into directory*
-| Select which <<Creating directories, directory>> the listings should be imported into. +
+| Select which <<#3200, directory>> the listings should be imported into. +
 If you did not create a special directory for this, then the standard directory is used.
 
 | *Warehouse for stock*
@@ -3175,7 +3175,7 @@ If you did not create a special directory for this, then the standard directory 
 | *Stock dependence*
 | Choose between *unlimited (with synchronisation)*, *unlimited (without synchronisation)*, *limited (with reservation)* and *limited (without reservation)*. +
 *_Important:_* If you select *Limited* (both) or *Unlimited (with synchronisation)*, then you should deactivate the following options until the listings are checked: +
-<<Activating the automatic stock update, Activate automatic stock update>> and <<Setting up stock, End offers automatically>>.
+<<Activating the automatic stock update, Activate automatic stock update>> and <<#2500, End offers automatically>>.
 
 2+^| Import settings
 
