CHANGE a few sentences as requested in feedback loop

--- a/docs/de-de/modules/artikel/pages/attribute.adoc
+++ b/docs/de-de/modules/artikel/pages/attribute.adoc
@@ -508,7 +508,7 @@ Konkret ist das T-Shirt in den Varianten "Rot/S", "Rot/L", "Blau/S" und "Blau/L"
 Du könntest neue Farb- und Größenvarianten hinzufügen.
 Beispielsweise könntest du die Varianten "Grün/S" und "Grün/L" hinzufügen.
 * *_Was nicht möglich ist_*:
-Du kannst keine neue Attribute ins Spiel bringen.
+Du kannst keine neuen Attribute ins Spiel bringen.
 Beispielsweise kannst du das Attribut "Material" nicht nachträglich hinzufügen.
 In diesem Fall empfehlen wir dir, einen neuen Artikel anzulegen, damit es keine Probleme mit offenen Bestellungen und vorhandenen Beständen gibt.
 
