--- a/docs/de-de/modules/artikel/pages/bilder.adoc
+++ b/docs/de-de/modules/artikel/pages/bilder.adoc
@@ -233,7 +233,7 @@ Nachdem du den Cache invalidierst wird jede Bildgröße neu erstellt, wenn das B
 
 //tag::personalise-itemimage-urls-preamble[]
 
-Bild-URLs enthalten standardmäßig den Domain-Namen `plentymarkets.com`.
+Bild-URLs enthalten standardmäßig einen CDN-Domain-Namen.
 Es ist aber möglich, stattdessen eine eigene Domain und Subdomain zu verwenden.
 Die Tabelle vergleicht die Standard-CDN-Domain und eine eigene CDN-Domain.
 
